--- a/.vuepress/public/index.css
+++ b/.vuepress/public/index.css
@@ -1,15 +1,11 @@
+.hero {
+    height: 490px !important;
+    background: url(/hero2.png) center center / cover no-repeat !important;
+}
+
 .hero h1,
 .hero p {
-    width: 100vw;
     color: #fff;
-    position: absolute;
-    margin: 0 auto;
-}
-
-.hero h1 {
-    top: 20px;
-}
-
-.hero p {
-    top: 60px;
+    position: relative;
+    top: -158px;
 }
